--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,13 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <script type="text/javascript" src="//at.alicdn.com/t/font_8d5l8fzk5b87iudi.js"></script>
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title><%= htmlWebpackPlugin.options.title %></title>
+    <!-- 引入图标库 -->
+    <script type="text/javascript" src="//at.alicdn.com/t/font_8d5l8fzk5b87iudi.js"></script>
+    <style type="text/css">
+      .icon {width: 1em; height: 1em;vertical-align: -0.15em;fill: currentColor;overflow: hidden;}
+    </style>
   </head>
   <body>
     <noscript>
